# raudit

./: .gitignore  AUTHORS  CHANGELOG.md  Cargo.toml  README.md  REAMDE.md  mkrel.sh
.github/workflows/: rust.yml
docs/: Makefile  README.md
docs/source/: conf.py  how-can-i-fix.rst  index.rst
man/: Makefile  raudit.7.rst
share/: default.rules
src/: main.rs  rule.rs  utils.rs
